--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -30,7 +30,7 @@
             {% endif %}
         {% endif %}
 
-        {% if site.resume == true %}
+        {% if site.CV == true %}
             <li class="item">
                 <a class="link" href="{% if site.CV-external %}{{ site.CV-url }}{% else %}{{ site.url }}/{{ site.CV-url }}{% endif %}">CV</a>
             </li>
