--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,10 +14,10 @@
             {% endif %}
         {% endif %}
 
-        {% if site.projects == true %}
-            {% if page.title != "Projects" %}
+        {% if site.gavagai == true %}
+            {% if page.title != "Gavagai" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/projects">Projects</a>
+                    <a class="link" href="{{ site.url }}/gavagai">Gavagai</a>
                 </li>
             {% endif %}
         {% endif %}
