--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,8 @@ layout: compress
     {% capture scss_sheet %}{% include style.scss %}{% endcapture %}
     {{ scss_sheet | scssify }}
     </style>
+    
+    {% include analytics.html %}
 
 </head>
 <body>
