--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -14,6 +14,14 @@
             {% endif %}
         {% endif %}
         
+        {% if site.research == true %}
+            {% if page.title != "Research" %}
+                <li class="item">
+                    <a class="link" href="{{ site.url }}/research">Research</a>
+                </li>
+            {% endif %}
+        {% endif %}
+        
         {% if site.blog == true %}
             {% if page.title != "Blog" %}
                 <li class="item">
