--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -36,10 +36,10 @@
             {% endif %}
         {% endif %}
         
-        {% if site.blog == true %}
-            {% if page.title != "Blog" %}
+        {% if site.tutorials == true %}
+            {% if page.title != "Tutorials" %}
                 <li class="item">
-                    <a class="link" href="{{ site.url }}/blog">Blog</a>
+                    <a class="link" href="{{ site.url }}/tutorials">Tutorials</a>
                 </li>
             {% endif %}
         {% endif %}
